# rustjs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
js/: const_function.js  function_expression.js  let_function.js  one_line1.js  some-data.csv  test1.js  variable_and_function.js
js/arrays/: array_apply.js  array_object_apply.js  number_array.js  push.js  variable_array.js
js/functions/: const_function.js  function.js  function_call.js  function_call_with_arg.js  function_expression.js  function_for_scope.js  function_function_call_with_args.js  function_with_loop.js  let_function.js  let_function_call.js  map_function_expression.js
js/if_while_for/: for_if.js  for_if1.js  for_if2.js  for_loop_through_array.js  for_test_ident.js  for_test_ident_plus_ident.js  if1.js  if2.js  if3.js  if3_1.js  if3_2.js  if4.js  if5.js  nested_for.js  nested_for_mul.js
js/math/: and1.js  bitwise.js  function_return_plus_number.js  minus.js  mul.js  number_plus_function_return.js  number_plus_return_value.js  plus.js  triple_eq.js
js/objects/: edit_object_and_log_from_another_object.js  log_object_object_call_property.js  object_expression_1.js  object_new_property.js  object_object_call_property.js  same_variable_different_scope.js
js/variables/: let_a.js  let_a_math.js  let_a_math1.js  let_var_plus_var.js
src/: constants.rs  js_token.rs  lexer.rs  main.rs  scope.rs  tests.rs
src/ast/: ast.rs  parser.rs  parser_old.rs
src/ast_interpreter/: bin_op.rs  helpers.rs  interpreter.rs  mod.rs
src/compiler/: compiler.rs  mod.rs  op_codes.rs  to_bytes.rs
(+130 files in other folders)
